# logsplitter

./: .gitignore  Cargo.toml  config.toml  profile.pb
src/: dec.rs  enc.rs  gzip.rs  main.rs
