[package]
name = "dads_gzip_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", features = [
    "default",
    "sync",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "time",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures = "0.3"
chrono = "0.4"
flate2 = "1.0"
pin-project = "1"
anyhow = "1"
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
bimap = "0.6"
rand = "0.8"
tokio-scoped = "0.2"
pprof = { version = "0.11", features = [
    "flamegraph",
    "default",
    "protobuf",
    "protobuf-codec",
] }
protobuf = "3.2"
